<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/background"
    android:orientation="vertical"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sample_nameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/sample_moreId"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_below="@id/sample_nameId"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_round_button"
            android:text="@string/more"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/expandable_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sample_moreId"
            android:background="@color/background"
            android:visibility="visible">


            <TextView
                android:id="@+id/sample_descriptionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/des"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"
                android:textStyle="normal" />


            <Button
                android:id="@+id/sample_collapseId"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_below="@+id/sample_descriptionId"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_round_button"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>